tests/negative/typecheck/sum-repeat.orng
fn main() -> Int
    let x: (y | y | y)
    0